[package]
name = "resonate"
version = "0.9.2"
edition = "2021"

[[bin]]
name = "resonate"
path = "src/main.rs"

[features]
concurrency-stress = []

[dependencies]
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
cron = "0.12"
chrono = "0.4"
futures = "0.3"
async-stream = "0.3"
prometheus = "0.13"
lazy_static = "1"
fastrand = "2"
tracing-appender = "0.2"
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }
url = "2"
base64 = "0.22"
google-cloud-pubsub = "0.33.1"
tower-http = { version = "0.6", features = ["trace"] }
